[cp article-align] Fix some small annoyances with the local article editor
Summary:
The local article editor hasn't gotten any love in a while, so a bunch
of things were needlessly annoying and bad. This improves a bunch of small
things:

 - Makes the article editor not continually increase in height(!!!)
 - Causes the article preview to render immediately
 - Removes some unnecessary scroll bars from the page and preview iframes
 - Makes the "phone" view actual render what it looks like on a phone
 - Defaults to the "phone" view on load, just like the live site
 - Merges in D40017 to remove the annoying react warning that happened on load
 - Makes the "add a widget" and "insert template" dropdowns wrap, so they don't
   overflow into the previews

Screenshot:
{F936679}

Test Plan:
 - Visit [this local article editor](http://localhost:9000/?article#content=%5B%7B%22content%22%3A%22Here%27s%20the%20type%20of%20problem%20you%20might%20see%20on%20the%20AP%20Statistics%20exam%20where%20you%20have%20to%20use%20the%20sampling%20distribution%20of%20a%20sample%20proportion.%22%2C%22images%22%3A%7B%7D%2C%22widgets%22%3A%7B%7D%7D%5D)
 - See that there's no react warning at load
 - See that there's no scroll bar on the page because it's not very tall
 - See that the "add a widget" and "insert template" dropdowns are wrapping
   because they're too large
 - See that we've defaulted to the "phone" preview
 - Compare to
   https://www.khanacademy.org/devadmin/content/articles/x828ca27e76c58fbc, see
   that the preview for the text actually looks like the live site phone preview
 - See that the editor doesn't continually grow every half a second
 - `make build`
 - Visit http://localhost:8081/devadmin/content/articles/x828ca27e76c58fbc, see that the article editor still works there

Reviewers: alex, joshuan

Reviewed By: alex

Subscribers: tom, jared

Differential Revision: https://phabricator.khanacademy.org/D40018

--- a/stylesheets/local-only/khan-site.css
+++ b/stylesheets/local-only/khan-site.css
@@ -3651,9 +3651,6 @@ body {
   height: 100%;
 }
 body {
-  overflow-y: scroll;
-}
-body {
   font-family: 'Proxima Nova', 'Helvetica', 'Corbel', sans-serif;
   font-size: 14px;
   margin: 0;
