--- a/stylesheets/perseus-admin-package/editor.less
+++ b/stylesheets/perseus-admin-package/editor.less
@@ -257,6 +257,7 @@
     border-top: 0;
     border-radius: 0 0 @editorBorderRadius @editorBorderRadius;
     display: flex;
+    flex-wrap: wrap;
     padding: @editorPadding/2;
 
     select {
